[gd_scene load_steps=5 format=3 uid="uid://dtk611p1yg21u"]

[ext_resource type="Script" path="res://scenes/components/shader_edit.gd" id="1_fuc3g"]
[ext_resource type="FontVariation" uid="uid://bcpktw644umxw" path="res://assets/font/dyh_jbmono.tres" id="3_ix4vq"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_8kt61"]
number_color = Color(0.631373, 1, 0.878431, 1)
symbol_color = Color(0.560784, 0.654902, 0.827451, 1)
function_color = Color(0.341176, 0.698039, 1, 1)
member_variable_color = Color(0.619608, 0.733333, 0.831373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6yges"]
bg_color = Color(0.213, 0.24925, 0.3, 1)

[node name="ShaderEdit" type="CodeEdit"]
offset_right = 369.0
offset_bottom = 266.0
theme_override_colors/selection_color = Color(0.729412, 0.729412, 0.729412, 0.705882)
theme_override_constants/line_spacing = 2
theme_override_fonts/font = ExtResource("3_ix4vq")
theme_override_font_sizes/font_size = 18
text = "shader_type canvas_item;

void fragment(){
    vec3 col = vec3(1.0);
    col += .5;
    COLOR = vec4(col, 1.0);
}"
context_menu_enabled = false
wrap_mode = 1
scroll_smooth = true
minimap_draw = true
caret_blink = true
caret_blink_interval = 0.5
caret_move_on_right_click = false
syntax_highlighter = SubResource("CodeHighlighter_8kt61")
highlight_all_occurrences = true
symbol_lookup_on_click = true
line_folding = true
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true
code_completion_enabled = true
indent_use_spaces = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("1_fuc3g")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6yges")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4

[node name="ErrorOutput" type="Label" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.160784, 0.160784, 1)
theme_override_fonts/font = ExtResource("3_ix4vq")
theme_override_font_sizes/font_size = 16
autowrap_mode = 3

[connection signal="caret_changed" from="." to="." method="_on_caret_changed"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="symbol_lookup" from="." to="." method="_on_symbol_lookup"]
[connection signal="symbol_validate" from="." to="." method="_on_symbol_validate"]
[connection signal="text_changed" from="." to="." method="_on_text_changed"]
